# STON

./: .README.md.swp  .buildinfo  .gitignore  .joss_paper.md.swp  .pyproject.toml.swp  CHANGELOG.html  CITATION.bib  CITATION.cff  MANIFEST.in  README.md  analysis_window.html  cluster_window.html  comparison_window.html  dev_notes.html  genindex.html  get_started.html  index.html  installation.html  joss_paper.bib  joss_paper.md  main_window.html  paper.bib  paper.md  pyproject.toml  search.html  searchindex.js  tests.html  usage.html  zoom_window.html
.doctrees/: CHANGELOG.doctree  analysis_window.doctree  cluster_window.doctree  comparison_window.doctree  dev_notes.doctree  environment.pickle  get_started.doctree  index.doctree  installation.doctree  main_window.doctree  tests.doctree  usage.doctree  zoom_window.doctree
.github/workflows/: .pylint.yml.swp  documentation.yml  draft-pdf.yml  pylint.yml  run_tests.yml
STON.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
_sources/: CHANGELOG.rst.txt  analysis_window.rst.txt  cluster_window.rst.txt  comparison_window.rst.txt  dev_notes.rst.txt  get_started.rst.txt  index.rst.txt  installation.rst.txt  tests.rst.txt  zoom_window.rst.txt
docs/source/: .dev_notes.rst.swp  .get_started.rst.swp  .index.rst.swp  .zoom_window.rst.swp  CHANGELOG.rst  analysis_window.rst  cluster_window.rst  comparison_window.rst  conf.py  dev_notes.rst  get_started.rst  index.rst  installation.rst  main_window.rst  tests.rst  usage.rst  zoom_window.rst
ston/: .cluster_window.py.swp  .conf.py.swp  .coverage  .image_processing.py.swp  .main_window.py.swp  .pylintrc.swp  .zoom_window.py.swp  cli.py  cluster_window.py  comparison_window.py  conf.py  example.conf  explore_files.py  image_processing.py  main.py  main_window.py  pylint_score.txt  pylintrc  template_file  zoom_window.py
ston/GUI/: .image_qt_display.py.swp  .main_window.py.swp  .zoom_window.py.swp  analysis_window.py  cluster_window.py  comparison_window.py  image_qt_display.py  main_window.py  plots.py  slider.py  zoom_window.py
ston/processing/: .image_processing.py.swp  enhancers.py  image_processing.py  segmentation_regions.py
ston/test_data/: test.conf
ston/tests/: .test_open_save_files.py.swp  .test_processing_image_processing.py.swp  .test_utils_conf.py.swp  general.py  test_open_save_files.py  test_processing_image_processing.py  test_utils_cli.py  (+3 more)
(+8 files in other folders)
