[build-system]
requires = ["setuptools"]
requires-python = ">=3.10"
build-backend = "setuptools.build_meta"

[project]
name = "STON"
version = "0.1"
authors = [{ name = "R. Thomas", email = "romain.thomas@sheffield.ac.uk" },
    	   { name = 'E. Dammer'}]
dependencies = ["sphinx-rtd-theme",
                "PyQt6 >= 6.7.1",
    		    "pillow >= 10.3",
                "matplotlib >= 3.0"]

[project.urls]
repository = "https://github.com/Romain-Thomas-Shef/STON"
homepage = "https://romain-thomas-shef.github.io/STON/build/html/index.html"
changelog = "https://romain-thomas-shef.github.io/STON/build/html/CHANGELOG.html"


[project.gui-scripts]
ston = "ston.main:main"

[tool.hatch.build.targets.sdist]
include = [
    "/ston",
]
