[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "STON"
version = "0.1"
requires-python = ">=3.10"
authors = [{ name = "R. Thomas", email = "romain.thomas@sheffield.ac.uk" },
    	   { name = 'E. Dammer'}]
dependencies = ["PySide6 >= 6.7.1",
    		    "pillow >= 10.3",
                "matplotlib >= 3.0",
                "numpy >=2.2.1",
                "scikit-image >= 0.25.0"]

[project.urls]
repository = "https://github.com/Romain-Thomas-Shef/STON"
homepage = "https://romain-thomas-shef.github.io/STON/build/html/index.html"
changelog = "https://romain-thomas-shef.github.io/STON/build/html/CHANGELOG.html"


[project.scripts]
ston = "ston.main:main"

[tool.hatch.build.targets.sdist]
include = ["/ston"]
